fix z-index on nav
Former-commit-id: 4a78a07d31da538c5c9896ee549cf21addad4e08

--- a/scss/app.scss
+++ b/scss/app.scss
@@ -54,7 +54,7 @@ header .glass {
 
 .headroom {
   transition: transform 400ms ease-out, background-color 500ms ease-out;
-  z-index: 3;
+  z-index: 999;
 }
 
 .headroom--pinned {
